SDKs/twilio.com/twilio_microvisor_v1/1.40.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_microvisor_v1/1.40.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.CreateAccountConfigCreateAccountConfigRequest{
        Key: "corrupti",
        Value: "provident",
    }

    ctx := context.Background()
    res, err := s.CreateAccountConfig(ctx, req, operations.CreateAccountConfigSecurity{
        Password: "YOUR_PASSWORD_HERE",
        Username: "YOUR_USERNAME_HERE",
    })
    if err != nil {
        log.Fatal(err)
    }

    if res.MicrovisorV1AccountConfig != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations

### SDK SDK

* `CreateAccountConfig` - Create a config for an Account.
* `CreateAccountSecret` - Create a secret for an Account.
* `CreateDeviceConfig` - Create a config for a Microvisor Device.
* `CreateDeviceSecret` - Create a secret for a Microvisor Device.
* `DeleteAccountConfig` - Delete a config for an Account.
* `DeleteAccountSecret` - Delete a secret for an Account.
* `DeleteApp` - Delete a specific App.
* `DeleteDeviceConfig` - Delete a config for a Microvisor Device.
* `DeleteDeviceSecret` - Delete a secret for a Microvisor Device.
* `FetchAccountConfig` - Retrieve a Config for an Account.
* `FetchAccountSecret` - Retrieve a Secret for an Account.
* `FetchApp` - Fetch a specific App.
* `FetchAppManifest` - Retrieve the Manifest for an App.
* `FetchDevice` - Fetch a specific Device.
* `FetchDeviceConfig` - Retrieve a Config for a Device.
* `FetchDeviceSecret` - Retrieve a Secret for a Device.
* `ListAccountConfig` - Retrieve a list of all Configs for an Account.
* `ListAccountSecret` - Retrieve a list of all Secrets for an Account.
* `ListApp` - Retrieve a list of all Apps for an Account.
* `ListDevice` - Retrieve a list of all Devices registered with the Account.
* `ListDeviceConfig` - Retrieve a list of all Configs for a Device.
* `ListDeviceSecret` - Retrieve a list of all Secrets for a Device.
* `UpdateAccountConfig` - Update a config for an Account.
* `UpdateAccountSecret` - Update a secret for an Account.
* `UpdateDevice` - Update a specific Device.
* `UpdateDeviceConfig` - Update a config for a Microvisor Device.
* `UpdateDeviceSecret` - Update a secret for a Microvisor Device.
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta and therefore, we recommend pinning usage to a specific package version.
This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated and maintained programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
